--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,224 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+ 
+
+#topmainu{
+  height: 70px;
+  width: 100%;
+  background-color: skyblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul li{
+  display: inline;
+  margin: 10px;
+  
+  
 }
+
+li {
+  font-size: 25px;
+  font-weight: bold;
+  
+  
+}
+
+.topimg{
+  height: auto;
+  width: 100%; 
+}
+.topimg img{
+  height: 600px;
+  width: 100%;
+  
+  
+}
+.child{
+  height: 400px;
+  width: 310px;
+  margin-left: 400px;
+  margin-top: -400px;
+  text-align: justify;
+  
+  
+    }
+  .child h2{
+    color: white;
+    
+  }  
+  .child p{
+    color: white;
+  }
+  .bt{
+    height: 50px;
+    width:120px ;
+    background-color: orange;
+    margin-right: 5px;
+  }
+  .btn1{
+    height: 50px;
+    width:120px ;
+    background-color: blueviolet;
+  }
+
+  .topfooter{
+    height: auto;
+    width: 100%;
+    background-color: black;
+    margin-top: 5px;
+  }
+  .footer{
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 20px;
+    color: white;
+    flex-wrap: wrap;
+  }
+
+  .footchild{
+    height: 240px;
+    width: 300px;
+    
+  }
+  .footchild h2{
+    font-size: 22px;
+    font-weight: normal;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .footchild1 h2{
+    font-size: 22px;
+    font-weight: normal;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .footchild2 h2{
+    font-size: 22px;
+    font-weight: normal;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .footchild3 h2{
+    font-size: 22px;
+    font-weight: normal;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .stureg{
+    height: "auto";
+    width: 100%;
+  
+  }
+  .stureg img{
+    height: 700px;
+    width: 100%;
+    
+  }
+  
+#record{
+  height: 450px;
+  width: 550px;
+  border: 1px solid skyblue;
+  margin-left: 800px;
+  position: absolute;
+margin-top: -600px;
+  background-color: skyblue;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border: 1px solid blue;
+  padding: 20px;
+  }
+  input{
+    height: 45px;
+    width: 500px;
+    display: block;
+    margin-top: 5px;
+    padding: 15px;
+    font-size: 20px;
+    border-radius: 10px;
+    
+  }
+  
+  label{
+    font-size: 20px;
+  
+  }
+  
+  button{
+    height: 50px;
+    width: 500px;
+    background-color: orange;
+    border-radius: 10px;
+    margin-top: 10px;
+    font-size: 20px;
+    color: white;
+    font-weight: bolder;
+  }
+
+  #editrec{
+    display: none;
+    height: auto;
+    width: 550px;
+    border: 1px solid royalblue;
+    background-color: royalblue;
+    margin-left: 850px;
+    margin-top: -110px;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+transition: 0.3s;
+
+  }
+
+  
+  .display{
+    padding-top: 5px;
+    height: "auto";
+    width: 100%;
+    
+    
+  }
+  .display h1{
+    color: royalblue;
+  }
+.display table{
+  border:"1px"; 
+  width:800px; 
+  height:100px;
+  
+  
+}
+.display table tr{
+  background-color: lightgreen;
+  
+  font-size:23px; 
+}
+
+.display table tr td{
+  color: white;
+}
+  #seachdata{
+    display: none;
+  }
+  .srerch{
+    height: 500px;
+    width: 100%;
+    background-color: skyblue;
+  }
+  #seachdata{
+    display: none;
+  }
+  
+  .main{
+    margin-left:500px;
+    padding-top:50px;
+    height: 500px;
+    width: 500px;
+    
+    
+  }
